--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://barribhanukrishna:bhanu@cluster0.pmmcczj.mongodb.net/pinvent-app-master?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://barribhanukrishna:bhanu@cluster0.pmmcczj.mongodb.net/anika?retryWrites=true&w=majority
 
 NODE_ENV=development
 
